--- a/music/personal/templates/personal/stepFive.html
+++ b/music/personal/templates/personal/stepFive.html
@@ -3,7 +3,7 @@
  <div class="step-five step__section section-hidden" data-step="5">
     <div class="step__section--single step__section--box">
         <h2 class="download__title">Ссылки на площадки</h2>
-        <form class="form-five" action="POST" id="formFive">
+        <form class="form-five" id="formFive">
             <label class="form-step__label" for="link-1">
                 <p>Ссылка на карточку исполнителя в</p>
                 <input class="form-step__input" type="text" id="link-1">
