--- a/music/personal/templates/personal/stepThreeAlbum.html
+++ b/music/personal/templates/personal/stepThreeAlbum.html
@@ -3,7 +3,7 @@
 <div class="step-three step__section section-hidden" data-step="3">
     <div class="step__section--album hidden step__section--box">
         <h2 class="download__title">Заполните для каждого трека</h2>       
-        <form class="form-three" action="POST" id="formThreeAlbum">
+        <form class="form-three" id="formThreeAlbum">
             <div class="upload-singl tracks">               
                 <div class="form-step__track" >
                     <div class="form-step__track-top"> 
@@ -97,6 +97,40 @@
                                 </p>
                             </div>
                         </label>
+                        <label class="form-step__label" for="track-isrc0">
+                            <p>ISRC</p>
+                            <input class="form-step__input" type="text" id="track-isrc0">
+                            <div class="tultip">
+                                <button class="tultip__btn" type="button">
+                                    <svg class="tultip__icon">
+                                        <use xlink:href="#tultip"></use>
+                                    </svg>
+                                </button>
+                                <p class="tultip__content">Lorem ipsum dolor sit, amet consectetur
+                                    adipisicing
+                                    elit.
+                                    Necessitatibus magni modi, adipisci cumque, minus nulla tenetur
+                                    pariatur
+                                </p>
+                            </div>
+                        </label>
+                        <label class="form-step__label" for="track-upc0">
+                            <p>UPC</p>
+                            <input class="form-step__input" type="text" id="track-upc0">
+                            <div class="tultip">
+                                <button class="tultip__btn" type="button">
+                                    <svg class="tultip__icon">
+                                        <use xlink:href="#tultip"></use>
+                                    </svg>
+                                </button>
+                                <p class="tultip__content">Lorem ipsum dolor sit, amet consectetur
+                                    adipisicing
+                                    elit.
+                                    Necessitatibus magni modi, adipisci cumque, minus nulla tenetur
+                                    pariatur
+                                </p>
+                            </div>
+                        </label>
                     </div>
                     <button class="add-track__btn btn" type="button">
                 Еще трек</button>
@@ -107,9 +141,7 @@
                 <span class="link__line link__line--right"></span>
                 <span class="link__line link__line--bottom"></span>
                 <span class="link__line link__line--left"></span>
-                Загрузить</button>
-               
-        </form>
-            
+                Загрузить</button>               
+        </form>            
     </div>
 </div>
