--- a/music/personal/templates/personal/stepFiveAlbum.html
+++ b/music/personal/templates/personal/stepFiveAlbum.html
@@ -3,7 +3,7 @@
  <div class="step-five step__section section-hidden" data-step="5">
     <div class="step__section--album hidden step__section--box">
         <h2 class="download__title">Ссылки на площадки</h2>
-        <form class="form-five" action="POST" id="formFiveAlbum">
+        <form class="form-five" id="formFiveAlbum">
             <label class="form-step__label" for="link-album-1">
                 <p>Ссылка на карточку исполнителя в</p>
                 <input class="form-step__input" type="text" id="link-album-1">
@@ -23,7 +23,7 @@
                 <span class="checkbox__text">Принимаю
                     <a href="#">условия публичной Оферты</a></span>
             </label>
-            <button class="btn header__link link step__btn" data-step="6">
+            <button class="btn header__link link step__btn" type="submit" data-step="6">
                 <span class="link__line link__line--top"></span>
                 <span class="link__line link__line--right"></span>
                 <span class="link__line link__line--bottom"></span>
